{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "60eb4275-eba4-4e9b-beab-2abac187b789",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9fd84cc1-81b1-455a-85cd-362f3de9584f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "b715fd1f-9d86-4e41-bca4-07316d9a4fd7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Left Right",
                    "id": "0b70744b-93dc-4ecb-a333-8d503802b7cc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a8093eca-6b12-4c0c-b1c7-bea578745e83",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e58881cb-4465-46d7-b585-3c8bb2016987",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8daae6fd-d005-4b18-befd-09b0ab67b56f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}